# lithium

./: .gdbinit  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
cfg/: .gdbinit  x86_64-lithium.json
kernel/: Cargo.toml  arch.rs  console.rs  cpu.rs  entry.S  heap.rs  kalloc.rs  kernel.ld  lib.rs  linker.ld  memory.rs  multiboot.rs  net.rs  panic.rs  param.rs  pci.rs  runtime.rs  rust-toolchain.toml  spinlock.rs  sync.rs  trap.rs
kernel/src/: arch.rs  entry.S  main.rs
src/: lib.rs  macros.rs  main.rs
src/sys/: alloc.rs  console.rs  gdt.rs  interrupts.rs  memory.rs  mod.rs  serial.rs  time.rs
