[package]
name = "lithium"
description = "An experimental, unikernel-based operating system."
authors = ["Kosi Nwabueze <kosinw@mit.edu>"]
repository = "https://github.com/kosinw/lithium"
readme = "README.md"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"]}
x86_64 = "0.14.11"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.8"
uart_16550 = "0.2.19"
pic8259 = "0.10.4"
linked_list_allocator = "0.10.5"
